# unPHold

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml  unfold.py
.github/workflows/: tests.yml  tests_dev.yml  tests_main.yml
docs/: index.md  installation.md  usage.md
docs/api/: metrics.md  unfold.md
docs/stylesheets/: extra.css
docs/theory/: metrics.md  unfolding.md
docs/tutorials/: defect.md  graphene.md  mlip_relaxed.md  si.md  twisted_bilayer.md
examples/: si_bulk_unfolding.py
tests/: conftest.py  test_smoke.py  test_unfold_si.py
tests/data/si/uc_1_sc_2_aims/: force_constants.h5  phonopy.yaml
tests/data/si/uc_1_sc_2_aims/aims_runs/0/: aims.out  geometry.in
tests/data/si/uc_2_sc_1_aims/: force_constants.h5  phonopy.yaml
tests/data/si/uc_2_sc_1_aims/aims_runs/0/: aims.out  control.in  geometry.in
unphold/: __init__.py  atoms.py  metrics.py  unfold.py  utils.py
